WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274691
Speculative mitigation against a crash involving CodeBlock::m_metadata.
https://bugs.webkit.org/show_bug.cgi?id=274691
Summary
Speculative mitigation against a crash involving CodeBlock::m_metadata.
Mark Lam
Reported
2024-05-24 16:08:21 PDT
rdar://127571559
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2024-05-24 16:13:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29094
EWS
Comment 2
2024-05-24 17:22:27 PDT
Committed
279300@main
(59012130505d): <
https://commits.webkit.org/279300@main
> Reviewed commits have been landed. Closing PR #29094 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug