Cherry-pick 279300@main (59012130505d). https://bugs.webkit.org/show_bug.cgi?id=274691

Speculative mitigation against a crash involving CodeBlock::m_metadata.
    https://bugs.webkit.org/show_bug.cgi?id=274691
    rdar://127571559

    Reviewed by Yijia Huang and Yusuke Suzuki.

    We sometimes see crashes due to CodeBlock::m_metadata->unlinkedMetadata() being null.
    This change adds a speculative null check to mitigate against stepping on this.

    * Source/JavaScriptCore/bytecode/CodeBlock.cpp:
    (JSC::CodeBlock::~CodeBlock):
    * Source/JavaScriptCore/bytecode/MetadataTable.cpp:
    (JSC::MetadataTable::destroy):
    * Source/JavaScriptCore/bytecode/MetadataTable.h:
    (JSC::MetadataTable::isDestroyed const):

    Canonical link: https://commits.webkit.org/279300@main

Canonical link: https://commits.webkit.org/274313.422@webkitglib/2.44