Source/JavaScriptCore/bytecode/CodeBlock.cpp
@@ -852,12 +852,11 @@ CodeBlock::~CodeBlock()
         vm.m_perBytecodeProfiler->notifyDestruction(this);
 
     if (LIKELY(!vm.heap.isShuttingDown())) {
-        if (m_metadata) {
+        // FIXME: This check should really not be necessary, see https://webkit.org/b/272787
+        ASSERT(!m_metadata || m_metadata->unlinkedMetadata());
+        if (m_metadata && !m_metadata->isDestroyed()) {
             auto unlinkedMetadata = m_metadata->unlinkedMetadata();
-
-            // FIXME: This check should really not be necessary, see https://webkit.org/b/272787
-            ASSERT(unlinkedMetadata);
-            if (unlinkedMetadata && unlinkedMetadata->didOptimize() == TriState::Indeterminate)
+            if (unlinkedMetadata->didOptimize() == TriState::Indeterminate)
                 unlinkedMetadata->setDidOptimize(TriState::False);
         }
     }
